--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,33 +5,16 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:name=".ECommerceApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher_foreground"
         android:label="@string/app_name"
         android:theme="@style/Theme.ECommerceEF.SafeArea"
         android:usesCleartextTraffic="true">
 
+        <!-- Login Activity (Launcher) -->
         <activity
-            android:name=".LoginActivity"
-            android:exported="false" />
-
-        <activity
-            android:name=".RegisterActivity"
-            android:exported="false" />
-
-        <activity
-            android:name=".ProductListActivity"
-            android:exported="false" />
-
-        <activity
-            android:name=".CartActivity"
-            android:parentActivityName=".ProductListActivity" />
-        <activity
-            android:name=".ProductDetailActivity"
-            android:parentActivityName=".ProductListActivity" />
-
-        <activity
-            android:name=".MainActivity"
+            android:name=".presentation.login.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -39,9 +22,37 @@
             </intent-filter>
         </activity>
 
-        <!-- Agrega CheckoutActivity -->
+        <!-- Register Activity -->
         <activity
-            android:name=".CheckoutActivity"
-            android:parentActivityName=".CartActivity" />
+            android:name=".presentation.register.RegisterActivity"
+            android:exported="false" />
+
+        <!-- Main Activity -->
+        <activity
+            android:name=".presentation.main.MainActivity"
+            android:exported="false" />
+
+        <!-- Product List Activity -->
+        <activity
+            android:name=".presentation.products.ProductListActivity"
+            android:exported="false" />
+
+        <!-- Product Detail Activity -->
+        <activity
+            android:name=".presentation.products.ProductDetailActivity"
+            android:parentActivityName=".presentation.products.ProductListActivity"
+            android:exported="false" />
+
+        <!-- Cart Activity -->
+        <activity
+            android:name=".presentation.cart.CartActivity"
+            android:parentActivityName=".presentation.products.ProductListActivity"
+            android:exported="false" />
+
+        <!-- Checkout Activity -->
+        <activity
+            android:name=".presentation.chekout.CheckoutActivity"
+            android:parentActivityName=".presentation.cart.CartActivity"
+            android:exported="false" />
     </application>
 </manifest>
